# MCP-Server-Agent-Coding-

./: CLAUDE.md  README.md
.claude/: settings.local.json
ai_integration/: ollama_mcp_demo.py
config/: server.json
docs/plan/: 01-总体规划.md  02-技术调研.md  03-C++工具参考.md  04-Python-Agent层.md  05-DeepSeek集成.md  06-轨迹分析与Demo结果.md  07-排错全记录.md  08-效率优化.md  09-功能扩展.md  10-分工追溯时间线.md  11.1-面试-项目架构与安全.md  11.2-面试-安全机制深入.md  11.3-面试-Agent系统与ReAct.md  11.4-面试-训练数据构造.md  11.5-面试-扩展功能与优化.md  11.6-面试-代码导读与方法论.md  12-Claude-Desktop-MCP接入排错记录.md
scripts/: rebuild.sh  start_services.sh  test_mcp.sh  verify_claude_config.sh
src/: CMakeLists.txt  mcp_server_main.cpp
src/config/: config.cpp  config.h
src/json_rpc/: http_jsonrpc.cpp  http_jsonrpc.h  jsonrpc.h  jsonrpc_serialization.cpp  jsonrpc_serialization.h  stdio_jsonrpc.cpp
src/logger/: logger.cpp  logger.h
src/mcp/: mcp_server.cpp  mcp_server.h  types.cpp  types.h
src/mcp_client/: mcp_client.cpp  mcp_client.h
src/server/builtin/: builtin_prompts.cpp  builtin_prompts.h  builtin_registry.cpp  builtin_registry.h  builtin_resources.cpp  builtin_resources.h  builtin_tools.cpp  builtin_tools.h
src/server/builtin/tools/: analyze_code_tool.cpp  analyze_text_file_tool.cpp  calculate_tool.cpp  code_search_tool.cpp  echo_tool.cpp  execute_code_tool.cpp  get_time_tool.cpp  get_weather_tool.cpp  git_diff_tool.cpp  list_files_tool.cpp  read_file_tool.cpp  run_tests_tool.cpp  tool_registrars.h  tool_result_utils.h  write_file_tool.cpp
workspace/: maze  maze.cpp  maze_test.cpp  weather.py
workspace/demo_outputs/: fibonacci.py  fibonacci_example.py  fizzbuzz.py  min_cost_deletion  min_cost_deletion.cpp  palindrome.py  test_fibonacci.py  test_fizzbuzz.py  test_min_cost  test_palindrome.py  test_quick.py  test_sort.py
workspace/tasks/: buggy.py  test_buggy.py
